--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["image", "server", "resize"],
     "license": "MIT",
     "require": {
-        "diarmuidie/imagerack-kernel": "dev-master"
+        "diarmuidie/imagerack-kernel": "^0.1"
     },
     "suggest": {
         "league/flysystem-aws-s3-v3": "Allows using S3 as the source and cache locations"
