--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "require": {
         "diarmuidie/imagerack-kernel": "^0.1"
+        "php": ">=5.4",
     },
     "suggest": {
         "league/flysystem-aws-s3-v3": "Allows using S3 as the source and cache locations"
